--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -58,6 +58,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * BillFront
 * BIMwelt Systems
 * Bloom
+* Blumbird GmbH
 * BookWell
 * Boundless Geo
 * Brainsfeed
