--- a/content/community/training.adoc
+++ b/content/community/training.adoc
@@ -22,6 +22,7 @@ tel:+918040937123
 | Starweaver | Global | Clojure in a Nutshell | https://www.starweaver.com | USA: +1-646-883-1460 +
 UK: +44 20 3289 3277 +
 helpdesk@starweaver.com
+| Blumbird GmbH | Europe | All levels | https://blumbird.com/ | clojure@blumbird.com
 | Peter Taoussanis | Europe | Enterprise Clojure | https://www.taoensso.com | ptaoussanis@taoensso.com
 | Adam Bard | North America | Clojure Training | http://clojuretraining.ca | learnclojure@adambard.com
 | Mark Engelberg | North America (west coast) | Customized Training | https://www.linkedin.com/in/mark-engelberg-0a09a88a/ | mark.engelberg@gmail.com
