add pedestal to releases

--- a/content/news/2022/01/14/deref.adoc
+++ b/content/news/2022/01/14/deref.adoc
@@ -65,3 +65,4 @@ New releases and tools this week:
 * https://github.com/quoll/cljs-math[cljs-math] 0.1.3 - A ClojureScript port of clojure.java.math
 * https://github.com/epiccastle/spire[spire] 0.1.0-alpha.16 - Pragmatic provisioning using clojure
 * https://github.com/EducatedAlmost/isogeny[isogeny]  - Isogeny makes static configuration dynamic
+* https://github.com/pedestal/pedestal[Pedestal] 0.5.10 - Pedestal server-side libraries
