add 1.11 patch contributors

--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -23,7 +23,7 @@ The CA does not change the rights or responsibilities of the Clojure community u
 See the full <<contributors#,list of contributors>> that have signed the Clojure Contributor Agreement.
 
 [[patches]]
-== Contributed patches to Clojure:
+== Accepted patches in Clojure:
 
 * Aaron Bedra
 * Aaron Cohen
@@ -47,6 +47,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Andy Fingerhut
 * Andy Sheldon
 * Anthony Grimes
+* Arne Brasseur
 * Aspasia Beneti
 * Baishampayan Ghose
 * Ben Bader
@@ -115,12 +116,14 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Johan Mena
 * John Szakmeister
 * Jonas Enlund
+* Jonathan D Johnston
 * Jozef Wagner
 * Juha Arpiainen
 * Justin Balthrop
 * Justin Kramer
 * Karsten Schmidt
 * Kevin Downey
+* Keyhan Vakil
 * Konrad Hinsen
 * Kurt Harriger
 * Kwang Yul Seo
@@ -128,6 +131,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Lauri Pesonen
 * Lee Yen-Chin
 * Luke VanderHart
+* Marc O'Morain
 * Mark Simpson
 * Matt Revelle
 * Matthew Boston
@@ -150,6 +154,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Oliver Caldwell
 * Paul M Bauer
 * Paul Stadig
+* Paula Gearon
 * Pepijn de Vos
 * Phil Hagelberg
 * Philip Aston
