--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,14 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.1069 (Jan 26, 2022) [[v1.10.3.1069]]
+
+* Update some Maven transitive deps to address some CVEs
+* Update to tools.tools v0.2.5
+* Add check to error on invocation of multiple exec functions
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1120
+
+
 === 1.10.3.1058 (Jan 5, 2022) [[v1.10.3.1058]]
 
 * https://clojure.atlassian.net/browse/TDEPS-207[TDEPS-207] Fix deadlock in version range resolution
