--- a/content/news/2022/02/04/deref.adoc
+++ b/content/news/2022/02/04/deref.adoc
@@ -13,6 +13,7 @@ This week we released https://clojure.org/releases/devchangelog#v1.11.0-beta1[Cl
 
 == Podcasts and videos
 
+* https://lispcast.com/my-feelings-about-static-vs-dynamic-typing/[My feelings about static vs dynamic typing] - Eric Normand
 * https://www.youtube.com/watch?v=lJxvKNjRdu8[Interactive Clojure tutorial] - OrgPad
 * https://www.youtube.com/watch?v=PTN_Ao4JQu0[Modelling with Probability by Daniel Slutsky] - re:Clojure 2021 workshop
 * https://www.youtube.com/watch?v=eL5xponczn8[Computing Derivatives and Automatic Differentiation by Tovieye Moses Ozi] - re:Clojure 2021 workshop
