add learn clojure intro page

--- a/content/guides/learn/syntax.adoc
+++ b/content/guides/learn/syntax.adoc
@@ -5,6 +5,8 @@ Alex Miller
 :toc: macro
 :icons: font
 :navlinktext: Syntax
+:prevpagehref: clojure
+:prevpagetitle: Introduction
 :nextpagehref: functions
 :nextpagetitle: Functions
 
