--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -11,7 +11,7 @@ toc::[]
 
 Welcome to Clojure!
 
-Check out <<learn/syntax#,Learn Clojure>>, <<xref/../../community/resources#,Resources>>, or <<xref/../../community/books#,Books>> to learn the language! If you have questions, you can search or ask at the official forum https://ask.clojure.org[Ask Clojure].
+Check out <<learn/clojure#,Learn Clojure>>, <<xref/../../community/resources#,Resources>>, or <<xref/../../community/books#,Books>> to learn the language! If you have questions, you can search or ask at the official forum https://ask.clojure.org[Ask Clojure].
 
 == Dependencies
 
@@ -110,7 +110,7 @@ https://repl.it/languages/clojure[repl.it] provides a browser-based Clojure repl
 == Next steps
 
 * <<xref/../../community/tools#,Install editors and build tools>>
-* <<learn/syntax#,Start learning the Clojure basics>>
+* <<learn/clojure#,Start learning the Clojure basics>>
 * <<xref/../../community/books#,Learn Clojure from a book>>
 * <<xref/../../community/resources#,Explore Clojure communities and resources>>
 * https://ask.clojure.org[Ask questions about Clojure]
