--- a/content/guides/repl/introduction.adoc
+++ b/content/guides/repl/introduction.adoc
@@ -12,7 +12,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
-This guide is for developers who have at least a <<xref/../../learn/syntax#,basic understanding>> of Clojure,
+This guide is for developers who have at least a <<xref/../../learn/clojure#,basic understanding>> of Clojure,
  and want to become more proficient at using the Clojure REPL.
 
 == What is a REPL?
