--- a/content/releases/devchangelog.adoc
+++ b/content/releases/devchangelog.adoc
@@ -19,6 +19,11 @@ Note: All dev releases are subject to breaking changes for new work since the pr
 
 == Release 1.11.0
 
+=== 1.11.0-rc1 (Feb 16, 2022) [[v1.11.0-rc1]]
+
+* https://clojure.atlassian.net/browse/CLJ-2697[CLJ-2697] Add 1.11 changelog
+* https://clojure.atlassian.net/browse/CLJ-2695[CLJ-2695] Add more tests for parse-double
+
 === 1.11.0-beta1 (Feb 2, 2022) [[v1.11.0-beta1]]
 
 * https://clojure.atlassian.net/browse/CLJ-2690[CLJ-2690] Improve `iteration` docstring and arg names
