--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -53,9 +53,9 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
-== Development Release: 1.11.0-beta1 (Feb 2, 2022)
+== Development Release: 1.11.0-rc1 (Feb 16, 2022)
 
-* Clojure 1.11.0-beta1
+* Clojure 1.11.0-rc1
 * https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.clojure%22%20AND%20a%3A%22clojure%22%20AND%20v%3A1.11.0*[Clojure 1.11.0 pre-release builds]
 * <<devchangelog#,Dev changelog>>
 * Dependencies:
