--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -19,6 +19,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * #clojure IRC channel on https://libera.chat[Libera.Chat]
 * https://discord.gg/discljord[Discljord Clojure Discord Server]
 * https://discord.gg/MsejPv9JNG[Clojurians Discord Server]
+* https://twitter.com/i/communities/1494013093059432451[Twitter Community]
 
 == Tutorials and Learning Materials
 
