--- a/content/news/2022/03/04/deref.adoc
+++ b/content/news/2022/03/04/deref.adoc
@@ -40,7 +40,7 @@ New releases and tools this week:
 * https://github.com/nextjournal/clerk[clerk] https://github.com/nextjournal/clerk/blob/main/CHANGELOG.md#06387-2022-03-03[0.6.387] - Local-first notebooks for Clojure
 * https://github.com/esuomi/lein-git-revisions[lein-git-revisions] 0.3.0 - Automatically control Leiningen project version based on Git metadata
 * https://github.com/lucywang000/clj-statecharts[clj-statecharts] 0.1.2 - State Machine and StateCharts for Clojure(Script)
-* https://vlaaad.github.io/reveal/[https://vlaaad.github.io/reveal/] Free 1.3.270 and Pro 1.3.339 - Read Eval Visualize Loop for Clojure
+* https://vlaaad.github.io/reveal/[Reveal] Free 1.3.270 and Pro 1.3.339 - Read Eval Visualize Loop for Clojure
 * https://github.com/practicalli/clojure-deps-edn[clojure-deps-edn]  - User level aliases for Clojure CLI projects and community tools
 * https://github.com/behrica/scicloj.ml.clj-djl[scicloj.ml.clj-djl] 0.1.10 - clj-djl modles for metamorph.ml and scicloj.ml
 * https://github.com/BetterThanTomorrow/calva[Calva] https://github.com/BetterThanTomorrow/calva/releases/tag/v2.0.245[2.0.427] - Clojure & ClojureScript Interactive Programming for VS Code
